[tool.poetry]
name = "correl"
version = "0.1.0"
description = ""
authors = ["Jordi Carrera Ventura <jordi.carrera.ventura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.24.2"
pandas = "^2.0.0"
tqdm = "^4.65.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
